--- a/content/blog/2018-04-04-kaggle-panel-recap-my-data-science-journey/index.Rmd
+++ b/content/blog/2018-04-04-kaggle-panel-recap-my-data-science-journey/index.Rmd
@@ -80,3 +80,5 @@ With all of that said, I've begun to learn Python for data science as well, and 
 * [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/)
 
 While these are all great resources, they won't get you very far if you aren't applying what you've learned on a regular basis. Create a GitHub account and start building things - they don't have to be grandiose or even useful beyond your own personal learning, but creating them will help you develop your skills and build out a portfolio of work.  
+
+_Photo by <a href="https://unsplash.com/@climatereality?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">The Climate Reality Project</a> on <a href="https://unsplash.com/s/photos/conference?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>_
