cleaned up all categories and tags

--- a/content/blog/2017-08-11-want-to-work-with-data-don-t-wait/index.Rmd
+++ b/content/blog/2017-08-11-want-to-work-with-data-don-t-wait/index.Rmd
@@ -3,7 +3,8 @@ title: Want to work with Data? Don’t wait.
 author: Jesse Mostipak
 date: '2017-08-11'
 slug: want-to-work-with-data-don-t-wait
-categories: []
+categories: 
+  - reflection
 tags:
   - data science
   - education
