--- a/content/blog/2017-08-20-join-the-r-for-data-science-online-learning-community/index.Rmd
+++ b/content/blog/2017-08-20-join-the-r-for-data-science-online-learning-community/index.Rmd
@@ -4,12 +4,7 @@ author: Jesse Mostipak
 date: '2017-08-20'
 slug: join-the-r-for-data-science-online-learning-community
 categories:
-  - R
-  - R4DS
-  - data science
-  - education
-  - online learning
-  - community
+  - learning
 tags:
   - R
   - R4DS
