--- a/content/blog/2018-01-28-r4ds-february-challenge-winning/index.Rmd
+++ b/content/blog/2018-01-28-r4ds-february-challenge-winning/index.Rmd
@@ -3,7 +3,8 @@ title: 'R4DS February Challenge: #winning'
 author: Jesse Mostipak
 date: '2018-01-28'
 slug: r4ds-february-challenge-winning
-categories: []
+categories:
+  - content creation
 tags:
   - community
   - R4DS
