--- a/content/blog/2018-02-24-r4ds-january-challenge-get-involved/index.Rmd
+++ b/content/blog/2018-02-24-r4ds-january-challenge-get-involved/index.Rmd
@@ -2,6 +2,8 @@
 title: 'R4DS January Challenge: get involved!'
 author: Jesse Mostipak
 date: '2017-12-29'
+categories:
+  - content creation
 tags:
   - community
   - R4DS
