--- a/content/blog/2018-02-24-r4ds-march-challenge-participate-in-a-viewing-party/index.Rmd
+++ b/content/blog/2018-02-24-r4ds-march-challenge-participate-in-a-viewing-party/index.Rmd
@@ -2,6 +2,8 @@
 title: 'R4DS March Challenge: Participate in a Viewing Party!'
 author: Jesse Mostipak
 date: '2018-02-24'
+categories:
+  - content creation
 tags:
   - community
   - presenting
