--- a/content/blog/2018-07-04-when-in-doubt-optimize-for-joy/index.Rmd
+++ b/content/blog/2018-07-04-when-in-doubt-optimize-for-joy/index.Rmd
@@ -3,7 +3,8 @@ title: When in doubt, optimize for joy
 author: Jesse Mostipak
 date: '2018-07-19'
 slug: when-in-doubt-optimize-for-joy
-categories: []
+categories: 
+  - reflection
 tags:
   - joy
 ---
