--- a/content/blog/2020-05-03-doesn-t-this-make-you-miss-dplyr-tho/index.Rmd
+++ b/content/blog/2020-05-03-doesn-t-this-make-you-miss-dplyr-tho/index.Rmd
@@ -3,14 +3,14 @@ title: Doesn't this make you miss {dplyr} tho?
 author: Jesse Mostipak
 date: '2020-05-03'
 slug: doesn-t-this-make-you-miss-dplyr-tho
-categories: []
+categories: 
+  - reflection
 tags:
   - data science
   - learning
   - learning to learn
   - python
   - R
-  - teaching yourself
 header:
   caption: ''
   image: ''
