--- a/content/blog/2017-12-22-r4ds-the-next-iteration/index.Rmd
+++ b/content/blog/2017-12-22-r4ds-the-next-iteration/index.Rmd
@@ -3,7 +3,8 @@ title: 'R4DS: the next iteration'
 author: Jesse Mostipak
 date: '2017-12-22'
 slug: r4ds-the-next-iteration
-categories: []
+categories: 
+  - reflection
 tags:
   - community
   - data science
