--- a/content/blog/2018-01-03-data-science-with-r-how-do-i-start/index.Rmd
+++ b/content/blog/2018-01-03-data-science-with-r-how-do-i-start/index.Rmd
@@ -4,11 +4,8 @@ author: Jesse Mostipak
 date: '2018-01-03'
 slug: data-science-with-r-how-do-i-start
 categories:
-  - data science
-  - education
-  - online learning
-  - R
-  - R4DS
+  - resources
+  - learning
 tags:
   - data science
   - education
