--- a/content/blog/2018-03-26-r4ds-april-challenge-time-for-some-spring-cleaning/index.Rmd
+++ b/content/blog/2018-03-26-r4ds-april-challenge-time-for-some-spring-cleaning/index.Rmd
@@ -3,7 +3,8 @@ title: 'R4DS April Challenge: time for some spring cleaning!'
 author: Jesse Mostipak
 date: '2018-03-26'
 slug: r4ds-april-challenge-time-for-some-spring-cleaning
-categories: []
+categories: 
+  - reflection
 tags:
   - challenge
   - data science
