--- a/content/blog/2018-05-05-r4ds-may-challenge-sign-up-for-office-hours/index.Rmd
+++ b/content/blog/2018-05-05-r4ds-may-challenge-sign-up-for-office-hours/index.Rmd
@@ -3,7 +3,8 @@ title: 'R4DS May Challenge: sign up for office hours!'
 author: Jesse Mostipak
 date: '2018-05-05'
 slug: r4ds-may-challenge-sign-up-for-office-hours
-categories: []
+categories: 
+  - content creation
 tags:
   - challenge
   - learning
