--- a/content/blog/2018-08-12-learning-to-learn-process-over-product/index.Rmd
+++ b/content/blog/2018-08-12-learning-to-learn-process-over-product/index.Rmd
@@ -3,7 +3,8 @@ title: 'Learning to Learn: Process Over Product'
 author: Jesse Mostipak
 date: '2018-08-12'
 slug: learning-to-learn-process-over-product
-categories: []
+categories: 
+  - reflection
 tags:
   - data science
   - learning
