updated subtitles and summaries for most recent posts

--- a/content/blog/2020-04-25-there-s-no-crying-in-data-science/index.Rmd
+++ b/content/blog/2020-04-25-there-s-no-crying-in-data-science/index.Rmd
@@ -3,6 +3,8 @@ title: There's No Crying in Data Science
 author: Jesse Mostipak
 date: '2020-04-25'
 slug: there-s-no-crying-in-data-science
+subtitle: Just kidding we cry all the time here.
+summary: "My reflections on why my brain absolutely refuses to remember anything Python-related, despite my best efforts."
 categories: 
   - reflection
   - learning
