--- a/content/blog/2021-05-24-3-2-1-mario-kart-tidytuesday-unfiltered/index.Rmd
+++ b/content/blog/2021-05-24-3-2-1-mario-kart-tidytuesday-unfiltered/index.Rmd
@@ -5,12 +5,14 @@ date: '2021-05-24'
 slug: 
 categories:
   - tutorial
+subtitle: "Is Rainbow Road actually challenging? Or does it just have a reputation of being challenging?"
 tags:
   - #TidyTuesday
   - R
   - streaming
   - boxplot
-tags: [content creation, R, TidyTuesday, Mario Kart]
+  - Mario Kart
+summary: "Code and video walkthrough of the boxplot we created as part of the #TidyTuesday Unfiltered stream."
 ---
 
 At my first data science job I worked with a guy who would throw his hands up and shout "We did it, Reddit!" any time something went really well. 
